MDEV-30118 ha_maria::extra exception

The exception in the bug report seems to be that ha_maria::file is null.

The functions that would set ha_maria::file to null are ha_maria::close
and ha_maria::drop_table (which calls ::close).

ha_maria::drop_table is used for temporary tables called at the
sql layer by the function free_tmp_table.

To improve the safety of pointers lets set entry->file= NULL in
free_tmp_table (where file is the hander). Also like the
other callers to free_tmp_table, assign the table pointer argument
to NULL after use.

There seems in the bug report an error deleting tempory files also
occuring so its quite possible the duplicate closing results in
the error.